# metaprocessor

./: .envrc  .gitignore  flake.nix  license.md  pyproject.toml  readme.md
.github/workflows/: Build.yml  PyPI.yml  build-linux.yml  build-windows.yml  flakehub.yml  pypi.yml  release.yml  ruff.yml
docs/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  theme.config.tsx  tsconfig.json
docs/components/: footer.tsx  head.tsx  logo.tsx
docs/pages/: _app.mdx  _app.tsx  _meta.json  about.mdx  index.mdx
docs/pages/docs/: _meta.json  completion.mdx  config.mdx  develop.mdx  index.mdx  lib.mdx  object.mdx  objects.mdx  run.mdx
metaprocessor/: __init__.py  __main__.py  cli.py  config.py  main.py
metaprocessor/command/: config.py
metaprocessor/commands/: completion.py  config.py  metawear.py  object.py  objects.py  run.py
metaprocessor/helpers/: boto3.py  completion.py  config.py  decorator.py  metawear.py  workflow.py
metaprocessor/libs/: steps.py  uptime.py
